--- a/app/views/session_invitation_mailer/invite_student.html.erb
+++ b/app/views/session_invitation_mailer/invite_student.html.erb
@@ -1,16 +1,15 @@
-<h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
+<h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 10px; margin-bottom:35px">Hi <%= @member.name %></h2>
 
-<h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #111111">We would like to invite you to the next <b>codebar</b> session</h3>
-<p style="font-weight: 300; font-size: 16px; color: #2e2e2e;"> In our sessions, you will be able to go through any of our available HTML/CSS and Javascript tutorials or get guidance on your personal projects with help from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
+<h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #111111; margin-bottom: 10px;">We would like to invite you to the next <b>codebar</b> workshop</h3>.
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e;"> In our workshops, you will be able to go through any of our available <%= link_to "HTML/CSS, Javascript and Ruby tutorials", "http://codebar.github.io/tutorials", style: "color: #a369d5; text-decoration: none;" %> or get guidance on your personal projects with help from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
 
 <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">
-If you are not a woman, but are part of an underrepresented minority or have any other reasons that you think you should be attending our sessions, reply to this email and let us know why. <b>codebar</b> exists to promote diversity and help breach the gender gap in the programming world, so you cannot attend without us agreeing to it first.
+If you are not a woman, but are part of an underrepresented minority or have any other reasons that you think you should be attending our workshops, reply to this email and let us know why. <b>codebar</b> exists to promote diversity and help breach the gender gap in the programming world, so you cannot attend without us agreeing to it first.
 </p>
 
 <div style="display: block;">
   <div style="width: 340px; padding-right: 40px; display: inline-block; vertical-align: top;">
-    <h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;"><%= @session.title %> by Codebar</h2>
-    <small><%= @session.description %></small>
+    <h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;">Coding workshop</h2>
     <p style="font-size: 16px; font-weight: 300; margin-top: 7px;">on <b style="color: #555555;font-size: 16px; font-weight: 600; margin-top: 0;"><%= l(@session.date_and_time, format: :email)%></b></p>
     <div style="background-color: #F7F7F7; width: 90%; border-radius: 6px; box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset; font-size: 18px; padding: 5px 14px; text-align: center; margin: 31px 0 25px; border: 1px solid #dddddd;">
       <p> <%= link_to "RSVP to the session", full_url_for(invitation_url(@invitation)), style: "text-decoration:none; color: #663095; font-size: 25px; font-weight: 600; letter-spacing: 0.02em; margin: 10px; text-decoration: none; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);"%></p>
@@ -23,10 +22,9 @@ If you are not a woman, but are part of an underrepresented minority or have any
     <p style="color: #434950; font-size: 16px; font-weight: 400; padding-bottom: 15px;">
     <%= @host_address.to_html %>
     </p>
-    <a href="https://maps.google.com/maps?q=<%= @host_address.postal_code %>" style="color: a369d5 text-decoration: underline"> view map </a>
+    <a href="https://maps.google.com/maps?q=<%= @host_address.postal_code %>" style="color: #a369d5 text-decoration: underline"> view map </a>
     <div style="width:120px; height:41px; margin-top: 33px;"><%=image_tag(@session.host.avatar, width: "120px") %></div>
   </div>
-
 </div>
 
 <div style="clear:both; width: 100%; height: 10px;"></div>
