display attendances in invitation page

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -614,3 +614,11 @@ footer
     .quarter
       padding-top: 10px
       text-align: center
+
+ul.guide
+  list-style: circle
+  color: $navigation-links-purple
+  font-size: 0.8em
+
+  li
+    padding: 5px
