--- a/app/views/invitation/_student.html.haml
+++ b/app/views/invitation/_student.html.haml
@@ -1,3 +1,5 @@
-%p Please let us know if you will be attending our session by setting your attendance status.
+%p Please let us know if you will be attending our workshop by setting your attendance status.
 
-%p In our coding sessions, you will get to go through any of our available tutorials with help from our coaches. Our latest tutorial is <b> #{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
+%p In our coding workshops, you will get to go through any of our available tutorials with help from our coaches or get help on your own projects. Our latest tutorial is <b> #{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
+
+%p If you are unable to attend, please make sure you update your attendance status. We have limited space and do a coaches request depending on the number of attending students.
