--- a/app/views/invitation/_coach.html.haml
+++ b/app/views/invitation/_coach.html.haml
@@ -1,17 +1,18 @@
-%p Please let us know if you will be coaching at our session by setting your attendance status.
+%p Please let us know if you will be coaching at our workshop by setting your attendance status.
 
-%p The main theme of the session will be #{@invitation.parent.title}. You will be able to access it through our tutorials page soon. Students can choose any of the available tutorials to go through or ask for help on their own projects, so we ask that all coaches familiarise themselves with the tutorials in general.
+%p The main theme of the workshop will be #{@invitation.parent.title}. You will be able to access it through our tutorials page soon. Students can choose any of the available tutorials to go through or ask for help on their own projects, so we ask that all coaches familiarise themselves with the tutorials in general.
 
 %p
-  Before committing to attend any of our sessions, make sure you read and understand our
+  Before committing to attend any of our workshop, make sure you read and understand our
   =link_to "code of conduct", "http://codebar.io/code-of-conduct"
-  , as we have a zero tolerance policy and expect everyone to behave appropriately.
+  , as we have a zero tolerance policy and expect everyone to behave appropriately and make sure you go through the
+  = link_to "taeching guide", teaching_guide_path
 
 %p Our latest available tutorial is <b>#{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
 
 %h3 Resources
 %ul
   %li
-    =link_to "Codebar Tutorials", "https://codebar.github.io/codebar/tutorials"
+    =link_to "Codebar Tutorials", "https://codebar.github.io/tutorials"
   %li
-    =link_to "How to be an effective teacher guide", "https://github.com/codebar/planner/issues/53"
+    =link_to "How to be an effective teacher guide", teaching_guide_path
