--- a/app/views/session_invitation_mailer/attending.html.erb
+++ b/app/views/session_invitation_mailer/attending.html.erb
@@ -1,15 +1,14 @@
 <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
 
 <% if @invitation.role.eql?("Coach") %>
-  <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">Thanks for offering to coach, this means a lot to us. See you at the session!</p> 
+  <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">Thanks for offering to coach, this means a lot to us. See you at the workshop!</p> 
 <%  elsif @invitation.role.eql?("Student") %>
-  <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;"> Thank you for confirming you attendance. See you at our session!</p> 
+  <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;"> Thank you for confirming you attendance. See you at our workshop!</p> 
 <% end %>
 
 <div style="display: block;">
   <div style="width: 340px; padding-right: 40px; display: inline-block; vertical-align: top;">
-    <h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;"><%= @session.title %> by Codebar</h2>
-    <small><%= @session.description %></small>
+    <h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;">Coding workshop by Codebar</h2>
     <p style="font-size: 16px; font-weight: 300; margin-top: 7px;">on <b style="color: #555555;font-size: 16px; font-weight: 600; margin-top: 0;"><%= l(@session.date_and_time, format: :email)%></b></p>
     <div style="width: 90%; font-size: 18px; padding: 5px 14px; text-align: center; margin: 31px 0 25px;">
     </div>
