Refactor. Add aditional test. Make feedback rake task more informative.

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -526,7 +526,7 @@ footer
     border-left: 5px solid
     transition-duration: 0.2s
 
-.message_container
+.feedback
   padding: 90px
   text-align: center
   line-height: 2em
