--- a/app/views/session_invitation_mailer/invite_coach.html.erb
+++ b/app/views/session_invitation_mailer/invite_coach.html.erb
@@ -6,9 +6,11 @@
 
 <p style="font-weight: 300; font-size: 16px; color: #2e2e2e;">You can find all of our available tutorials at <%= link_to "http://codebar.github.io/tutorials", "http://codebar.github.io/tutorials/", style: "text-decoration:none; color: #663095;"  %>. If you would like to improve any of the existing content, feel free to issue a pull request to our <%= link_to "github repository", "https://github.com/codebar/tutorials" , style: "text-decoration:none; color: #663095;" %>. </p>
 
-<p style="font-weight: 300; font-size: 16px; color: #2e2e2e;">Before committing to attend any of our workshops, make sure you read and understand our <%= link_to "code of conduct", "http://codebar.io/code-of-conduct", style: "text-decoration:none; color: #663095;"  %> as we have a zero tolerance policy and expect everyone to behave appropriately. </p>
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e;">Before committing to attend any of our workshops, make sure you read and understand our <%= link_to "code of conduct", "http://codebar.io/code-of-conduct", style: "text-decoration:none; color: #663095;"  %> as we have a zero tolerance policy and expect everyone to behave appropriately. You should also go through our <b><%= link_to "How to be an effective teacher", "https://github.com/codebar/planner/issues/53", style: "text-decoration:none; color: #663095;" %></b> guide. If you have anything to add to it, please leave a comment on the page. </p>
 
-<p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 20px;">You should also go through our <b><%= link_to "How to be an effective teacher", "https://github.com/codebar/planner/issues/53", style: "text-decoration:none; color: #663095;" %></b> guide. If you have anything to add to it, please leave a comment on the page. </p>
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">
+Codebar is now on gitter. <%= link_to "Join the chat", "https://gitter.im/codebar/tutorials", style: "color: #a369d5; text-decoration: none;" %> to offer online help and guidance to students going through the tutorials.
+</p>
 
 <div style="display: block;">
   <div style="width: 340px; padding-right: 40px; display: inline-block; vertical-align: top;">
