keep the greeting casual and fix typo! :|

--- a/app/views/feedback_request_mailer/request_feedback.html.erb
+++ b/app/views/feedback_request_mailer/request_feedback.html.erb
@@ -1,8 +1,8 @@
 <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
 
-<h3 style="font-weight: 400; font-size: 17px; letter-spacing: 0.01em; color: #111111">Thank you for attending our Coding workshop!</h3>
+<h3 style="font-weight: 400; font-size: 17px; letter-spacing: 0.01em; color: #111111">Thanks for attending our Coding workshop!</h3>
 
-<p style="font-weight: 300; font-size: 16px; color: #2e2e2e">We would be grateful for any feedback, suggestions, concerns and comments you can offer us about your experience. Your opinion and suggestions are very important in making <b>codebar</b> better and improving what we are offerring.
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e">We would be grateful for any feedback, suggestions, concerns and comments you can offer us about your experience. Your opinion and suggestions are very important in making <b>codebar</b> better and improving what we are offering.
 <br/>
 <br/>
 Feedback is completely anonymous. Filling in the form should only take you a couple of minutes.</p>
