--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -572,7 +572,7 @@ footer
     li
       float: left
       margin-left: 2px
-      background: url("star-rating.gif") no-repeat
+      background: image-url("star-rating.gif") no-repeat
       width: 25px
       height: 25px
       cursor: pointer
@@ -588,7 +588,7 @@ footer
 
   span.less
     cursor: pointer
-    background: url("star-rating.gif") -75px no-repeat
+    background: image-url("star-rating.gif") -75px no-repeat
     display: block
     float: left
     height: 25px
