Added phone number field to members

--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -17,6 +17,9 @@
           = f.input :email
         .half
           = f.input :twitter
+      .row
+        .half
+          = f.input :mobile
 
       = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
 
