update contact details

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -17,7 +17,7 @@
       <div style="width: 70%; border-radius:5px; padding: 20px 40px; margin: 70px auto 40px; border: 1px solid #ececec">
         <%= yield %>
 
-        <div style="color: #111111; font-size: 15px; font-weight: 300; margin-top: 60px;">Despo & Maria</div>
+        <div style="color: #111111; font-size: 15px; font-weight: 300; margin-top: 60px;">Despo</div>
         <div style="color: #111111; font-size: 16px; font-weight: 600; margin-top: 5px;"><a href="http://codebar.io" style="color: #663095; text-decoration: none;">Codebar</a></div>
 
         <p style="color: #6d6a6a; font-size: 13px; font-weight: 600; margin-top: 90px;">If you dont want to receive these emails <%= link_to "unsubscribe", full_url_for(unsubscribe_member_url(@member)), style: "color: #a369d5; text-decoration: underline" %></p>
