--- a/app/views/session_invitation_mailer/attending.html.erb
+++ b/app/views/session_invitation_mailer/attending.html.erb
@@ -29,8 +29,7 @@
 <div style="padding-top: 10px;">
   If you have any trouble finding the venue give us a call
   <br/>
-  <% [ "Maria Khait   <b>07792142702</b><br/>", "Despo Pentara <b>07402887214</b><br/>" ].shuffle.each do |phone_details| %>
-    <%= phone_details.html_safe %>
-  <% end %>
+  Despo Pentara <b>07402887214</b>
+  <br/>
 </div>
 <div style="clear:both; width: 100%; height: 10px;"></div>
