--- a/app/views/session_invitation_mailer/spots_available.html.erb
+++ b/app/views/session_invitation_mailer/spots_available.html.erb
@@ -29,9 +29,8 @@
 <div>
   If you have any trouble finding the venue give us a call
   <br/>
-  <% [ "Maria Khait   <b>07792142702</b><br/>", "Despo Pentara <b>07402887214</b><br/>" ].shuffle.each do |phone_details| %>
-    <%= phone_details.html_safe %>
-  <% end %>
+  Despo Pentara <b>07402887214</b>
+  <br/>
 </div>
 <div style="clear:both; width: 100%; height: 10px;"></div>
 <div style="color: #2E2E2E; font-size: 18px; font-weight: 600; margin-top: 40px;">See you on Wednesday!</div>
