--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             </li>
             <% if logged_in? %>
               <li>
-                <%= link_to "My Profile", edit_member_path %>
+                <%= link_to "My Profile", profile_path %>
               </li>
             <% end %>
           </ul>
