--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -16,10 +16,10 @@
 
   = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
   %small
-    * for coaches, this is used on our #{link_to("wall of fame", wall_of_fame_path)}
+    * this is used on our #{link_to("wall of fame", wall_of_fame_path)}
 
   %p
-  = f.association :roles, collection: Role.no_admins, as: :check_boxes, label: "Sign up as a"
+  = f.association :roles, collection: Role.no_admins, as: :check_boxes, label: "Subscribe as"
   %ul.hint
     %li if you want to learn but also have some programming related skills you want to share, you can select both <b>Student</b> and <b>Coach</b>
     %li
