--- a/app/views/portal/_coach.html.haml
+++ b/app/views/portal/_coach.html.haml
@@ -5,27 +5,33 @@
     .dot
 
   .description
-    .details-block
-      - @upcoming_coach.each do |invitation|
-        .three-quarters
+    - if @upcoming_coach.any?
+      .details-block
+        - @upcoming_coach.each do |invitation|
+          .three-quarters
+            %h3
+              = link_to invitation.parent.title, invitation_path(invitation)
+              .right-float
+                =link_to attendance_status(invitation), invitation_path(invitation), class: "button"
+            %h5= invitation.parent.description
+            %h6
+              = "on #{l(invitation.parent.date_and_time, format: :website_format)}"
+    - else
+      %em There are no upcoming events
+
+  - if @coached.any?
+    .titlebox.mission
+      %h2
+        Sessions coached
+      .dot
+
+    .description
+      - @coached.each do |invitation|
+        .details-block
           %h3
-            = invitation.parent.title
+            = link_to invitation.parent.title, invitation_path(invitation)
             .right-float
-              =link_to attendance_status(invitation), invitation_path(invitation), class: "button"
+              =link_to "View", invitation_path(invitation), class: "button"
           %h5= invitation.parent.description
           %h6
             = "on #{l(invitation.parent.date_and_time, format: :website_format)}"
-
-  .titlebox.mission
-    %h2
-      Sessions coached
-    .dot
-
-  .description
-    - @coached.each do |invitation|
-      .details-block
-        %h3
-          = invitation.parent.title
-        %h5= invitation.parent.description
-        %h6
-          = "on #{l(invitation.parent.date_and_time, format: :website_format)}"
