--- a/app/views/portal/_student.html.haml
+++ b/app/views/portal/_student.html.haml
@@ -10,7 +10,7 @@
         - @upcoming_student.each do |invitation|
           .three-quarters
             %h3
-              = invitation.parent.title
+              = link_to invitation.parent.title, invitation_path(invitation)
               .right-float
                 =link_to attendance_status(invitation), invitation_path(invitation), class: "button"
             %h5= invitation.parent.description
@@ -19,20 +19,18 @@
     - else
       %em There are no upcoming events
 
-  .titlebox.mission
-    %h2
-      Attended
-    .dot
-  .description
-    - if @attended.any?
+  - if @attended.any?
+    .titlebox.mission
+      %h2
+        Attended
+      .dot
+    .description
       .details-block
         - @attended.each do |invitation|
           %h3
-            = invitation.parent.title
+            = link_to invitation.parent.title, invitation_path(invitation)
             .right-float
               =link_to "View", invitation_path(invitation), class: "button"
           %h5= invitation.parent.description
           %h6
             = "on #{l(invitation.parent.date_and_time, format: :website_format)}"
-    - else
-      %em You have not attended any of our events yet :(
