--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -27,10 +27,10 @@ p
 
 .navbar
   float: left
-  font-size: 19px
+  font-size: 17px
   font-weight: 400
   letter-spacing: 0.02em
-  margin: 0
+  margin: 10px 0 0
   height: 42px
 
 #mobile-nav-icon
@@ -39,7 +39,7 @@ p
 .navbar li
   border-left: 1px solid $navigation-gray-separators
   float: left
-  padding: 10px 20px
+  padding: 5px 10px
 
 .navbar li:first-child
   border: none
@@ -53,6 +53,11 @@ p
   box-shadow: 0 1px 1px rgba(114, 98, 154, 0.1)
   float: right
 
+.login-button
+  color: $become-member-grey
+
+  &:hover
+    border-bottom: none
 a
   margin: 0
   padding: 0
@@ -287,7 +292,7 @@ a
 .center
   text-align: center
 
-.session
+.session, .sessions
   border-left: 10px solid $next-session-yellow
 
 .mission
@@ -302,10 +307,6 @@ a
 
 .course,
   border-left: 10px solid $next-course-green
-  background-color: $next-session-grey
-
-  &.past
-    border-left: 10px solid $lightgreen
 
 .session
   &.upcoming
@@ -317,7 +318,7 @@ a
 .titlebox
   padding: 10px 20px
   width: 83%
-  margin: 30px 0 30px
+  margin: 30px 0 20px
   padding: 20px 40px
   box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
   -webkit-box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
@@ -344,7 +345,7 @@ a
 .description
   margin-left: 50px
   width: 84%
-  padding-bottom: 30px
+  padding-bottom: 10px
 
   .sub-block
     margin-top: 10px
@@ -357,7 +358,7 @@ a
       border-bottom: 1px dotted $link-purple
 
   .move-top
-    padding-top: 10px
+    padding-top: 0px
 
   .details-block
     padding-top: 10px
@@ -390,6 +391,10 @@ a
 
     .short
       width: 54%
+
+    ul.short
+      margin: 0
+      padding-left: 0
 
 #sessions ul li
   margin-bottom: 15px
@@ -622,3 +627,18 @@ ul.guide
 
   li
     padding: 5px
+
+#events
+  .upcoming, .past
+    font-size: 16px
+
+    h3
+      margin: 5px 0
+
+    ul
+      li
+        margin: 10px
+        margin-bottom: 20px
+        padding: 15px
+
+
