use common partial for past and upcoming events

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,31 +4,11 @@
       .titlebox
         %h2 Upcoming
         .dot
-      .events
-        %ul
-          - @events.each do |event|
-            %li{ class: event.class.to_s.downcase}
-              %h3
-                - if !event.is_a? Sessions
-                  =link_to event do
-                    = event.to_s
-                - else
-                  = event.to_s
-              =l(event.date_and_time, format: :website_format)
+      = render partial: 'events', locals: { events: @events }
 
   - if @past_events.any?
     .past
       .titlebox
         %h2 Past
         .dot
-      .events
-        %ul
-          - @past_events.each do |event|
-            %li{ class: event.class.to_s.downcase}
-              %h3
-                - if event.is_a? Course
-                  =link_to course_url(event) do
-                    = event.to_s
-                - else
-                  = event.to_s
-              =l(event.date_and_time, format: :website_format)
+      = render partial: 'events', locals: { events: @past_events }
