--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
             <%= link_to "Events", events_path %>
             </li>
             <li>
+            <%= link_to "FAQ", faq_path %>
+            </li>
+            <li>
               <%= link_to "Tutorials", "http://tutorials.codebar.io" %>
             </li>
             <li>
