--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -642,3 +642,12 @@ ul.guide
         padding: 15px
 
 
+#faq
+  li
+    margin-bottom: 10px
+  .question
+    font-size: 18px
+    font-weight: bold
+  .answer
+    font-size: 16px
+
