--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -9,7 +9,7 @@
         %li
           .question Do I need to pay to attend Codebar?
           %p.answer
-            Absolutely not! We are lucky enough to have some great companies who are able to host the workshops and/or kindly provide food and our #{link_to "amazing coaches", wall_of_fame_path} give their time freely to help the community.
+            Absolutely not! We are lucky enough to have some great companies who are able to host the workshops and/or kindly provide food, and our #{link_to "amazing coaches", wall_of_fame_path} give their time freely to help the community.
 
         %li
           .question
