a course can have many tutors

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -272,6 +272,16 @@ a
   .about
     max-width: 500px
 
+#courses
+  .avatar
+    display: inline-block
+
+  .about
+    font-size: 18px
+    display: inline-block
+    width: 70%
+
+
 #wall-of-fame
   .coach
     .about
