--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -2,15 +2,12 @@
 <html>
   <head>
     <title>Codebar.io</title>
-    <script type="text/javascript" src="//use.typekit.net/hhc0xau.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
   </head>
   <body style="margin: 0; padding: 0">
     <div style="width: 100%; font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif">
 
       <div style="width: 100%; height: 10px; background-color: #2c173a; border-bottom: 2px solid #b9b1bf;">
-        <div style="margin:auto; width:200px; height:77px; margin-top: 20px; padding-top: 20px;"><%= image_tag(attachments['logo.png'].url, width: "200px", height: "77px") %></div>
+        <div style="margin:auto; width:200px; height:77px; margin-top: 20px; padding-top: 20px;"><%= image_tag(attachments['logo.png'].url, width: "200px", height: "77px", alt: 'logo') %></div>
       </div>
       <div style="width: 100%; height: 40px; background-color: #f6f4f8;">
       </div>
