--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -47,5 +47,8 @@
             .address
               = AddressDecorator.decorate(@meeting.venue.address).to_html
           .two-thirds
-            <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=bentima+house,+london&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=59.119059,113.818359&amp;ie=UTF8&amp;hq=&amp;hnear=Bentima+House,+168-172+Old+St,+London+EC1V+9BP,+United+Kingdom&amp;t=m&amp;z=14&amp;ll=51.525026,-0.090486&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=bentima+house,+london&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=59.119059,113.818359&amp;ie=UTF8&amp;hq=&amp;hnear=Bentima+House,+168-172+Old+St,+London+EC1V+9BP,+United+Kingdom&amp;t=m&amp;z=14&amp;ll=51.525026,-0.090486" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+            %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&t=m&z=15&output=embed} }
+            %br
+            %small
+              =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
 
