--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -21,7 +21,7 @@
               %br
               %small=talk.description
 
-          = talk.abstract
+          = talk.abstract.html_safe
 
         .tutor
           .avatar
