--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -1,6 +1,7 @@
 @import 'partials/colors'
 
 body
+  font-weight: 300
   margin: 0
   padding: 0
   font-family: proxima-nova, Helvetica, Arial, sans-serif
@@ -329,7 +330,7 @@ a
 
 .titlebox
   padding: 10px 20px
-  width: 83%
+  width: 90%
   margin: 30px 0 20px
   padding: 20px 40px
   box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
@@ -356,7 +357,7 @@ a
 
 .description
   margin-left: 50px
-  width: 84%
+  width: 90%
   padding-bottom: 10px
 
   .sub-block
