--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -3,7 +3,7 @@
 %meta{name: "robots", content: "index, follow" }
 %meta{property: "fb:admins", content: "622070503" }
 %meta{property: "og:type", content: "website" }
-%meta{property: "og:locale", content: "en_UK" }
+%meta{property: "og:locale", content: "en_GB" }
 %meta{property: "og:site_name", content: "Codebar"}
 %meta{name: "keywords", content: "codebar, programming, diversity, html, css, javascript, ruby"}
 %meta{property: "og:image", content: "http://codebar.io/images/logo-square.png"}
