add og:url in meta tags

--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -11,3 +11,4 @@
 %meta{name: "title", content: "Codebar"}
 %meta{property: "og:description", content: "Making tech more diverse and welcoming by bringing people together and helping teach programming skills."}
 %meta{ name: "description", content: "Making tech more diverse and welcoming by bringing people together and helping teach programming skills."}
+%meta{ property: "og:url", content: "http://codebar.io#{url_for(nil)}" }
