--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -36,7 +36,7 @@
                   = link_to "Attend", accept_invitation_url(@invitation), class: "button"
                 - else
                   = simple_form_for @invitation, url: :accept_with_note_invitation, method: :post do |f|
-                    = f.input :note, required: true, label: "What do you plan to work on at the workshop?"
+                    = f.input :note, label: "What do you plan to work on at the workshop?"
                     %small This will help us make the workshop easier to manage as we can figure out upfront with whom to pair you on the day.
                     %br
                     .right
